# mcpworkshop

./: .gitignore  README.md
code-rag/code_rag/: __init__.py  pyproject.toml
code-rag/code_rag/simple_parser/: README.md  __init__.py  db_load.py  embed_store.py  ruvector_store.py  simple_doc.py  walker.py
code-rag/code_rag/simple_parser/langs/: _grammar.py  base.py  html.py  javascript.py  python.py  python_ref.py  ref_base.py  ref_registry.py  registry.py  rust.py  tsx.py  typescript.py
code-rag/code_rag/simple_parser/scripts/: __init__.py  gen_embeding.py  load_db.py
code-rag/code_rag_py_mcp/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  migration_sql.py  pyproject.toml  workspace.dsl
code-rag/code_rag_py_mcp/alembic/: env.py
code-rag/code_rag_py_mcp/alembic/versions/: .gitkeep  001_code_rag.py  002_code_rag_embed_fn.py  003_code_rag_ns_index.py
code-rag/code_rag_py_mcp/code_rag_py_mcp/: __init__.py  config.py  filters.py  format.py  main.py  mcp_server.py  models.py  search.py  store.py
code-rag/code_rag_py_mcp/migrations/: 001_code_rag.sql  002_code_rag_embed_fn.sql  003_code_rag_ns_index.sql
code-rag/code_rag_py_mcp/scripts/: smoke_db.sh
code-rag/code_rag_py_mcp/tests/: test_config.py  test_filters.py  test_format.py  test_search_context.py
code-rag/simple_parser/: __init__.py  embed_store.py  embed_text.py  index_policy.py  models.py  walker.py
code-rag/simple_parser/langs/: __init__.py  _grammar.py  base.py  html.py  javascript.py  python.py  (+7 more)
infra/agent-lsp/: Dockerfile  compose.yml
infra/structurizr/: compose.yml
(+2 files in other folders)
