[project]
name = "simple-parser"
version = "0.1.0"
description = "Multi-language tree-sitter chunker and RuVector loader for code RAG"
readme = "simple_parser/README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-html>=0.23",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.scripts]
gen-embedding = "simple_parser.scripts.gen_embeding:main"
load-db = "simple_parser.scripts.load_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simple_parser"]
