[project]
name = "code-rag-py-mcp"
version = "0.1.0"
description = "Python Code RAG MCP server (FastMCP + SQLAlchemy + Alembic)"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "fastmcp>=2.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
code-rag-py-mcp = "code_rag_py_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_rag_py_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
